<resources>
    <string name="app_name">Flora</string>
    <string name="nombre">nombre</string>
    <string name="add_button_main">add button main</string>
    <string name="add_image_main">add image main</string>
    <string name="general_random_description">general random description</string>
    <string name="add_this_image">Add This Image</string>
    <string name="name">Name:</string>
    <string name="family">Family:</string>
    <string name="identification">Identification:</string>
    <string name="biotype">Biotype:</string>
    <string name="bio_reproduction">Bio Reproduction:</string>
    <string name="flowering">Flowering:</string>
    <string name="fructification">Fructification:</string>
    <string name="sexual_expression">Sexual Expression:</string>
    <string name="pollination">Pollination:</string>
    <string name="dispersion">Dispersion:</string>
    <string name="chromosome_number">Chromosome Number:</string>
    <string name="reproduction">Reproduction:</string>
    <string name="distribution">Distribution:</string>
    <string name="biology">Biology:</string>
    <string name="demography">Demography:</string>
    <string name="threats">Threats:</string>
    <string name="elevation">Elevation:</string>
    <string name="proposed_measures">Proposed Measures:</string>
    <string name="habitat">Habitat:</string>
    <string name="phytosociology">Phytosociology:</string>
    <string name="flora_id">Flora ID:</string>
    <string name="description">Description:</string>
    <string name="rv_nombre">Nombre:</string>
    <string name="familia">Familia:</string>
    <string name="touch_the_image">Touch the image to set the Flora Image:</string>
    <string name="uncomplete_flora_add">Name field can not be empty</string>
    <string name="completed_flora_add">Your Flora Has Been added!</string>
    <string name="alert_cancel_add_title">Are you sure?</string>
    <string name="alert_cancel_add_message">Do you REALLY want to go back and not to add?</string>
    <string name="alert_cancel_edit_message">Do you REALLY want to go back and not to edit?</string>
    <string name="alert_confirmation_add_title">Do you really want to add?</string>
    <string name="alert_confirmation_edit_title">Do you really want to edit?</string>
    <string name="alert_confirmation_add_message_flora">This Flora will be added</string>
    <string name="alert_confirmation_edit_message_flora">This Flora will be edited</string>
    <string name="alert_confirmation_add_message_image">This Image will be added to the selected Flora</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit_this_image">Edit this Image</string>
    <string name="flora_exists">This flora already exists</string>
    <string name="edit_flora_title">Edit this flora: </string>
    <string name="edit_flora_message">What do you want to edit on this flora?</string>
    <string name="cancel">Cancel</string>
    <string name="flora">Flora</string>
    <string name="image">Image</string>
    <string name="completed_flora_edit">Eddited</string>
    <string name="alert_delete_flora_title">Delete this flora?</string>
    <string name="alert_delete_flora_message">This flora will not be able anymore</string>
    <string name="flora_deleted">Deleted</string>
</resources>